Test adding tags on an html type input

--- a/component-library/components/content/content.jekyll.html
+++ b/component-library/components/content/content.jekyll.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="page animate">
+  <div class="page animate" data-rosey-tagger="true">
     {{include.content_html }}
   </div>
 </div>
