Rm trim() from generateLocales, add slugify to data-rosey tags, add data-rosey-tagger to more content

--- a/component-library/components/hero/hero.jekyll.html
+++ b/component-library/components/hero/hero.jekyll.html
@@ -7,7 +7,7 @@
         <div class="{{c}}__inner">
 
           <div class="{{c}}__left">
-            <h1 class="{{c}}__title" data-rosey="{{ include.title }}">{{ include.title }}</h1>
+            <h1 class="{{c}}__title" data-rosey="{{ include.title | slugify }}">{{ include.title }}</h1>
             <div class="{{c}}__description">{{ include.description_html }}</div>
             <div class="{{c}}__btn">
               <a href="{{ include.cta_button_link }}" class="cta-button c-button c-button--primary c-button--small">{{ include.cta_button }}</a>
