--- a/component-library/components/page-heading/page-heading.jekyll.html
+++ b/component-library/components/page-heading/page-heading.jekyll.html
@@ -1,7 +1,7 @@
 {% assign c = "c-page-heading" %}
 <div class="container">
   <div class="{{c}}">
-    <h1 class="{{c}}__title" data-rosey="{{ include.title }}">{{ include.title }}</h1>
+    <h1 class="{{c}}__title" data-rosey="{{ include.title | slugify }}">{{ include.title }}</h1>
     {% if include.description %}
       <p class="{{c}}__description">{{ include.description }}</p>
     {% endif %}
