--- a/site/_layouts/project.html
+++ b/site/_layouts/project.html
@@ -8,7 +8,7 @@ layout: default
   {% assign page_image = site.baseurl | append: page.image %}
   {% bookshop page-image image=page_image %}
 
-  <div class="page animate">
+  <div class="page animate" data-rosey-tagger="true">
     {{ content }}
   </div>
 
