--- a/site/_layouts/tag_page.html
+++ b/site/_layouts/tag_page.html
@@ -33,7 +33,7 @@ layout: default
                 {% endif %}
           
                 <h2 class="article__title">
-                  <a href="{{ post.url }}">{{ post.title }}</a>
+                  <a href="{{ post.url }}" data-rosey="{{ post.title | slugify }}">{{ post.title }}</a>
                 </h2>
           
                 <p class="article__excerpt">
